remove video uploading endpoint
